--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <title>Code Wars</title>
+
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="stylesheet" href="./public/global.css">
+    <link rel="stylesheet" href="./public/build/bundle.css">
+
+    <script defer src="./public/build/bundle.js"></script>
 </head>
 
 <body>
-
 </body>
 
 </html>
