--- a/jekyll/piyush/_posts/2021-05-18-welcome-to-jekyll.html
+++ b/jekyll/piyush/_posts/2021-05-18-welcome-to-jekyll.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
-date:   2021-05-17 00:45:53 +0530
-categories: jekyll update
+title:  "Awesome New Title"
+date:   2021-05-18 00:45:53 +0530
+categories: Awesome Cat1
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
@@ -22,8 +22,8 @@ print_hi('Tom')
 #=> prints 'Hi, Tom' to STDOUT.
 {% endhighlight %}
 
-Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
+Check out the <a href="https://jekyllrb.com/docs/home">Jekyll docs</a> for more info on how to get the most out of Jekyll. File all bugs/feature requests at [Jekyll’s GitHub repo][jekyll-gh]. If you have questions, you can ask them on [Jekyll Talk][jekyll-talk].
 
-[jekyll-docs]: https://jekyllrb.com/docs/home
-[jekyll-gh]:   https://github.com/jekyll/jekyll
-[jekyll-talk]: https://talk.jekyllrb.com/
+<br><a href="https://jekyllrb.com/docs/home">Jekyll docs</a> <br>
+<a href="https://github.com/jekyll/jekyll">Jekyll’s GitHub repo</a> <br>
+<a href="https://talk.jekyllrb.com/">Jekyll Talk</a> <br>
